# retrade-v2

./: .dockerignore  .gitignore  Jenkinsfile  README.md  TODO.md  all_new_schema.sql  docker-compose.yml  patch_service.php  payload.json  test_process.php
admin/: .env.example  composer.json  index.php  logout.php
admin/config/: bootstrap.php
admin/dashboard/: index.php
admin/templates/: navbar.php
admin/utils/: protected_route.php  (+1 more)
backend/: .env.example  main.py  pyproject.toml
backend/app/core/: config.py
backend/app/db/: elasticsearch.py  mongodb.py  neo4j.py  redis_db.py  session.py
backend/app/models/: auth_models.py  listing_models.py  recommendation_models.py
backend/app/routes/: admin_routes.py  auth_routes.py  fraud_routes.py  listing_routes.py
backend/app/schemas/: __init__.py  admin.py  carts.py  chats.py  orders.py  payment_dispute.py  payment_gateway.py  shop.py  user.py  user_report.py
backend/app/services/: Auth_services.py  fraud_services.py  listing_services.py  order_services.py  validate_users.py  verify_id.py
backend/app/templates/email/: buyer_pin.html  mass_broadcast.html  otp.html  payout.html  seller_reference.html  validate_email.html
backend/app/templates/emails/: OTP.html  validate_email.html
backend/app/utils/: email_helper.py  input_validation.py  vector_db.py
backend/tests/: test_validate_users.py
frontend/: .env.example  Terms-of-service.php  composer.json  config.php  functions.php  index.php  manifest.json  privacy-policy.php  search.php  settings.php  sw.js  test_payment.php
schemas/: 001_users.sql  002_shops.sql  003_shop_product.sql  004_cart_items.sql  004_carts.sql  005_chat_rooms.sql  006_chat_messages.sql  007_chat_attachments.sql  008_orders.sql  009_payment.sql  010_bank.sql  011_escrow.sql  012_payment_sessions.sql  013_webhook_events.sql  014_admins.sql  015_user_reports.sql  016_payment_disputes.sql
(+145 files in other folders)
