[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncmy>=0.2.11",
    "cryptography>=46.0.7",
    "easyocr>=1.7.2",
    "fastapi[all]>=0.135.3",
    "geoalchemy2>=0.19.0",
    "motor>=3.7.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "peewee>=4.0.4",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.49",
]
